syntax = "proto3";
option go_package = "./pb";

package pb;

message IPItem {
	int64 id = 1;
	string ipFrom = 2;
	string ipTo = 3;
	int64 version = 4;
	int64 expiredAt = 5;
	string reason = 6;
	int64 listId = 7;
	bool isDeleted = 8;
	string type = 9;
	string eventLevel = 10; // 级别
	string listType = 11; // 所在名单类型，加此字段是为了快速定位IP的性质
	int64 createdAt = 12;
}