syntax = "proto3";
option go_package = "./pb";

package pb;

message NodeCluster {
	int64 id = 1;
	string name = 2;
	int64 createdAt = 3;
	int64 nodeGrantId = 4;
	string installDir = 5;
	string uniqueId = 6;
	string secret = 7;
	string dnsName = 8;
	int64 dnsDomainId = 9;
	int64 httpCachePolicyId = 10;
	int64 httpFirewallPolicyId = 11;
	bool isOn = 12;
	string timeZone = 13;
	int32 nodeMaxThreads = 14;
	int32 nodeTCPMaxConnections = 15;
}